# Chi

./: .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  ChiApplicationWindow.qml  MVP-COMPONENTS.md  OverflowMenu.qml  OverflowMenu.qml.2  README.md  SizeSpecs.qml  chi.cpp  chi.cpp.bak  chi.h  complete.txt  install-ai.sh  install.sh  last-prompt.txt  lastsession.txt  qmldir  qmldir.bak  resources.qrc  smartui.cpp  smartui.h  todo.md  uninstall.sh
.backup/applicationwindow/: SmartApplicationWindow.qml  SmartApplicationWindow.qml.bak  WindowControls.qml
.backup/menus/: DropdownMenu.qml  OverflowMenu.qml
.backup/theme/: SmartTheme.qml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
Docs/: AlertDialog.txt  ApplicationWindow.txt  Badge.txt  BottomSheet.txt  DataTable.txt  Dialog.txt  EmptyState.txt  FAB.txt  FABMenu.txt  IconButton.txt  LinearProgressIndicator.txt  Menu.txt  NavigationBar.txt  NavigationRail.txt  RadioGroup.txt  SearchBar.txt  SegmentedButton.txt  Snackbar.txt  SplitButton.txt  Stepper.txt  Switch.txt  TextField.txt  ToggleButton.txt  Tooltip.txt
apps/aria/: CMakeLists.txt  install.sh
apps/aria/data/: io.github.chi.aria.desktop  io.github.chi.aria.metainfo.xml
apps/aria/qml/: CompactPlayer.qml  DropZone.qml  Main.qml  TimeDisplay.qml  VolumeSlider.qml  Waveform.qml
apps/aria/src/: audioengine.cpp  audioengine.h  folderplayer.cpp  folderplayer.h  main.cpp  waveformgenerator.cpp  waveformgenerator.h
apps/chi-settings/: CMakeLists.txt  install.sh  main.cpp
apps/chi-settings/qml/: Main.qml
backup/: install.sh  uninstall.sh
doc/: AlertDialog.md  Badge.md  Button.md  Card.md  Checkbox.md  ChiApplicationWindow.md  ChiElevation.md  ChiMotion.md  ChiTheme.md  CircularProgressIndicator.md  ConfirmDialog.md  Dialog.md  Divider.md  Icon.md  IconButton.md  IconFont.md  LinearProgressIndicator.md  ListItem.md  NavigationBarItem.md  Ripple.md  Slider.md  Snackbar.md  Switch.md  Tab.md  Tabs.md  TextField.md  Tooltip.md  TopAppBar.md  TopAppBarAction.md  index.md
docs/: Avatar.txt  AvatarGroup.txt  Breadcrumb.txt  Button.txt  ButtonGroup.txt  Checkbox.txt  Chip.txt  ChipGroup.txt  CircularProgressIndicator.txt  ConfirmDialog.txt  ConnectedIconButtonGroup.txt  ContextMenu.txt  FullscreenDialog.txt  INDEX.txt  IconButtonToggle.txt  ListItem.txt  NavigationDrawer.txt  SegmentedButtonSelection.txt  Skeleton.txt  Slider.txt  Tabs.txt  TopAppBar.txt  TreeView.txt  chi-site.html  index.html
examples/ChiCounter/: CMakeLists.txt  README.md
examples/ChiCounter/qml/: Main.qml
examples/ChiCounter/src/: main.cpp
examples/ChiTimer/: CMakeLists.txt  README.md
examples/ChiTimer/qml/: AlarmTab.qml  Main.qml  StopwatchTab.qml  TimerTab.qml  WorldClockTab.qml
examples/ChiTimer/src/: main.cpp
prompts/: text.txt
qml/Chi/: qmldir
qml/Chi/theme/: ChiElevation.qml  ChiMotion.qml  ChiTheme.qml  ChiTheme.qml.bak  IconFont.qml  ShapeTokens.qml  SizeSpecs.qml
qml/Chi/ui/Buttons/: Button.qml  ButtonGroup.qml  ConnectedButtonGroup.qml  ConnectedIconButtonGroup.qml  IconButton.qml  IconButtonToggle.qml  SegmentedButton.qml  SplitButton.qml  ToggleButton.qml
qml/Chi/ui/FAB/: FAB.qml  FABMenu.qml  FABMenuItem.qml
qml/Chi/ui/applicationwindow/: ChiApplicationWindow.qml  WindowControls.qml
qml/Chi/ui/carousel/: Carousel.qml  CarouselItem.qml
qml/Chi/ui/chips/: Chip.qml  ChipGroup.qml
qml/Chi/ui/common/: Icon.qml  Ripple.qml  StateLayer.qml
qml/Chi/ui/containers/: Card.qml  Divider.qml  SideSheet.qml  Toolbar.qml  ToolbarItem.qml  ToolbarSeparator.qml  ToolbarToggleItem.qml
qml/Chi/ui/data/: Avatar.qml  AvatarGroup.qml  CodeBlock.qml  ColorSwatch.qml  DataTable.qml  FileTable.qml  IconLabel.qml  Kbd.qml  Tag.qml  TreeView.qml
qml/Chi/ui/dialogs/: AlertDialog.qml  ConfirmDialog.qml  Dialog.qml  DialogManager.qml  FileDialog.qml  FileDialogGridView.qml  FileDialogListView.qml  FileDialogThumbnail.qml  FileDialogTreeView.qml
qml/Chi/ui/feedback/: Badge.qml  EmptyState.qml  Skeleton.qml  Snackbar.qml
qml/Chi/ui/inputs/: NumberField.qml  Stepper.qml  TextField.qml  TextField2.qml  qmldir
qml/Chi/ui/lists/: ListItem.qml  SwipeListItem.qml
qml/Chi/ui/menus/: ContextMenu.qml  DropdownMenu.qml  Menu.qml  MenuDivider.qml  MenuGap.qml  MenuItem.qml  MenuManager.qml  OverflowMenu.qml  Tooltip.qml
qml/Chi/ui/navigation/: BottomSheet.qml  Breadcrumb.qml  NavigationBar.qml  NavigationBarItem.qml  NavigationDrawer.qml  NavigationDrawerDivider.qml  NavigationDrawerItem.qml  NavigationRail.qml  PathSearchBar.qml  Tab.qml  Tabs.qml  (+2 more)
qml/smartui/: qmldir  qmldir.backup
qml/smartui/theme/: ChiTheme.qml  SmartTheme.qml
src/: chi.cpp  chi.h
src/filedialog/: CMakeLists.txt  fileiconprovider.cpp  fileiconprovider.h  fileinfo.h  filelistmodel.cpp  filelistmodel.h  register_types.cpp  register_types.h  thumbnailprovider.cpp  thumbnailprovider.h
testui/: AvatarShowcase.qml  BadgeShowcase.qml  ButtonShowcase.qml  CMakeCache.txt  CMakeLists.txt  CardShowcase.qml  CheckboxShowcase.qml  DialogShowcase.qml  FABMenuShowcase.qml  FileDialogDemo.qml  IconButtonShowcase.qml  IconButtonToggleShowcase.qml  LinearProgressShowcase.qml  Main.qml  MenuShowcase.qml  NavigationRailShowcase.qml  RadioButtonShowcase.qml  SliderShowcase.qml  SplitButtonShowcase.qml  SwitchShowcase.qml  TabsShowcase.qml  TextFieldShowcase.qml  ToggleButtonShowcase.qml  cmake_install.cmake  main.cpp
testui/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
testui/SmartUIBeta_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
testui/SmartUIBeta_autogen/EWIEGA46WW/: moc_smartui.cpp.d
testui/testui/.qt/qml_imports/: apptestui_build.rsp  apptestui_conf.cmake  apptestui_conf.rsp
testui/testui/.qt/rcc/: apptestui_raw_qml_0.qrc  qmake_testui.qrc
testui/testui/testui/: ButtonShowcase.qml  FABMenuShowcase.qml  IconButtonShowcase.qml  IconButtonToggleShowcase.qml  LinearProgressShowcase.qml  Main.qml  NavigationRailShowcase.qml  SplitButtonShowcase.qml  SwitchShowcase.qml  ToggleButtonShowcase.qml  apptestui_qml_module_dir_map.qrc  qmldir
(+103 files in other folders)
